--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -15,10 +15,16 @@
   <main class="form-signin w-100 m-auto" >
     <form action="/login" method="POST">
       <img class="mb-4" src="{{ url_for('static', filename='/img/esqueleto.gif') }}" alt="" width="72" height="57"/>
+      
+      
+      
       {% with messages = get_flashed_messages() %}
+      
       {% if messages %}
       <br/>
+      
       {% for message in messages %}
+      
       <div class="alert alert-primary alert-dismissible" role="alert">
         <strong>{{ message }} </strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" > </button>
@@ -28,7 +34,11 @@
       {% endfor %}
       {% endif %}
       {% endwith%}
+
+
+
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+      <input type="hidden" name="csrf_token" value="{{csrf_token() }}">
       <div class="form-floating">
         <input type="text" class="form-control" id="floatingInput" placeholder="Username" name="username"/>
         <label for="floatingInput">Username</label>
